--- a/auto-time/build.gradle
+++ b/auto-time/build.gradle
@@ -21,12 +21,13 @@ dependencies {
 	// 공개 API에 노출(JpaRepository 상속) → api
 	api("org.springframework.data:spring-data-jpa")
 
+
 	// 컴파일만 필요(런타임은 소비자 앱이 가짐)
 	compileOnly("org.springframework.boot:spring-boot-autoconfigure")
 	compileOnly("org.springframework.boot:spring-boot-starter-web")
 
 	implementation("org.springframework.boot:spring-boot-starter-security")
-	implementation("org.springframework.security:spring-security-core")
+	api("org.springframework.security:spring-security-core")
 
 	compileOnly("jakarta.persistence:jakarta.persistence-api")
 
