--- a/manager-service/build.gradle
+++ b/manager-service/build.gradle
@@ -26,6 +26,9 @@ repositories {
 }
 
 dependencies {
+    implementation(project(":auto-time"))
+    implementation project(':auto-response')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
@@ -35,7 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
 
