--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=never
 
+spring.main.allow-circular-references=true
+
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
