--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
+
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
 }
 
