--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -30,3 +30,6 @@ management.endpoint.health.show-details=always
 
 # Logging
 logging.level.com.eatcloud.customerservice=DEBUG
+
+# OAuth2 Resource Server (Passport JWT)
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-service:8081/api/v1/auth/.well-known/jwks.json
