--- a/admin-service/build.gradle
+++ b/admin-service/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer"
+
 }
 
 tasks.named('test') {
