--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     // annotation processing 보조 (jakarta 메타)
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+
+    implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer"
+
 }
 
 tasks.named('test') {
