--- a/store-service/src/main/resources/application.properties
+++ b/store-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=store-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}
 spring.datasource.username=${DB_USER}
