--- a/store-service/src/main/resources/application.properties
+++ b/store-service/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.application.name=store-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
+admin.base-url=http://admin-service
+
+
 spring.sql.init.mode=always
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:store_db}
