--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8082
 spring.application.name=customer-service
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/customer_db
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:customer_db}
+spring.datasource.username=${DB_USERNAME:user}
+spring.datasource.password=${DB_PASSWORD:password}
 
 # JPA
 spring.jpa.hibernate.ddl-auto=validate
