--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -1,10 +1,6 @@
 server.port=8081
 spring.application.name=customer-service
 
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.prefer-ip-address=false
-eureka.instance.hostname=customer-service
-
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -15,14 +11,11 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-# Redis configuration (commented out temporarily)
-# spring.data.redis.host=${REDIS_HOST}
-# spring.data.redis.port=6379
-# spring.data.redis.timeout=2000ms
-# spring.data.redis.database=0
+spring.data.redis.cluster.nodes=${REDIS_HOST}:${REDIS_PORT}
+spring.data.redis.cluster.max-redirects=3
+spring.data.redis.timeout=2000ms
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
-logging.level.com.eatcloud.orderservice=DEBUG
-logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.com.eatcloud.customerservice=DEBUG
