--- a/admin-service/build.gradle
+++ b/admin-service/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
     implementation("org.springframework.security:spring-security-oauth2-jose") // Nimbus JWT 파서
 
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     implementation(project(":auto-time"))
     implementation project(':auto-response')
