--- a/manager-service/src/main/resources/application-aws.properties
+++ b/manager-service/src/main/resources/application-aws.properties
@@ -18,14 +18,14 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath:db/schema.sql
-#spring.sql.init.continue-on-error=true
-#spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.continue-on-error=true
+spring.jpa.defer-datasource-initialization=true
 
 # Redis ??
 spring.data.redis.host=${REDIS_HOST}
